@@ -118,3 +118,4 @@ setSignatureForSelector("NSSavePanel", "gotoSheetDidEnd:returnCode:contextInfo:"
 setSignatureForSelector("NSNavFilepathInputController", "sheetDidEnd:returnCode:contextInfo:", "v16@4:8@12i16i20")
 setSignatureForSelector("NSNavFilepathInputController", "beginSheetForSavePanel:withFilepath:didEndSelector:contextInfo:", 'v@:@@:i')
 setSignatureForSelector("NSGraphicsContext", "graphicsPort", "^{CGContext=}@:")
+setSignatureForSelector("NSDocument", "initWithType:error:", "@@:@o^@")
